--- a/index.html
+++ b/index.html
@@ -1,30 +1,34 @@
-<html>
-  <head>
-    <link rel="stylesheet" href="index.css" />
-    <link
-      href="https://fonts.cdnfonts.com/css/cursed-timer-ulil"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <div class="container">
-      <div>
-        <h3>HOME</h3>
-        <p id="score-home" class="scorebord">0</p>
-        <button id="home1" onclick="homeIncrementOne()" class="Btn1">+1</button>
-        <button id="home2" onclick="homeIncrementTwo()" class="Btn2">+2</button>
-        <button id="home3" onclick="homeIncrementThree()" class="Btn3">
-          +3
-        </button>
-      </div>
-      <div>
-        <h3>AWAY</h3>
-        <p id="score-guest" class="scorebord">0</p>
-        <button id="guest1" onclick="guestIncrement1()" class="Btn1">+1</button>
-        <button id="guest2" onclick="guestIncrement2()" class="Btn2">+2</button>
-        <button id="guest3" onclick="guestIncrement3()" class="Btn3">+3</button>
-      </div>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Score Board Project</title>
+  <link rel="stylesheet" href="index.css" />
+  <link href="https://fonts.cdnfonts.com/css/cursed-timer-ulil" rel="stylesheet" />
+</head>
+
+<body>
+  <div class="container">
+    <div>
+      <h3>HOME</h3>
+      <p id="score-home" class="scorebord">0</p>
+      <button id="home1" onclick="homeIncrementOne()" class="Btn1">+1</button>
+      <button id="home2" onclick="homeIncrementTwo()" class="Btn2">+2</button>
+      <button id="home3" onclick="homeIncrementThree()" class="Btn3">
+        +3
+      </button>
     </div>
-    <script src="index.js"></script>
-  </body>
+    <div>
+      <h3>AWAY</h3>
+      <p id="score-guest" class="scorebord">0</p>
+      <button id="guest1" onclick="guestIncrement1()" class="Btn1">+1</button>
+      <button id="guest2" onclick="guestIncrement2()" class="Btn2">+2</button>
+      <button id="guest3" onclick="guestIncrement3()" class="Btn3">+3</button>
+    </div>
+  </div>
+  <script src="index.js"></script>
+</body>
+
 </html>
